# TP

./: Dockerfile  pyproject.toml
.github/workflows/: CI.yml
app/: main.py
tests/: test_main.py
